# spikeml

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  modules.rst
nb/: snn.ipynb  test_feedback.ipynb  test_layers.ipynb  test_plot.ipynb  test_signal.ipynb  test_spikes.ipynb  test_vector.ipynb  tests.ipynb
nb/tests/spikeml/util/: test_filter_util.ipynb
src/spikeml/: core.py  ssnn4.py
src/spikeml/core/: base.py  chain.py  feedback.py  matrix.py  monitor.py  ngram.py  optimize.py  params.py  run.py  signal.py  snn.py  snn_monitor.py  snn_stats.py  snn_stats_viewer.py  snn_viewer.py  spikes.py  vector.py  viewer.py
src/spikeml/plot/: plot_stats.py  plot_util.py
src/spikeml/ui/: ipywidgets_ui.py
src/spikeml/utils/: dict_util.py  filter_util.py  fmt_utils.py  nb_util.py  type_utils.py  vector.py
tests/: test_basic.py
tests/spikeml/core/: test_base.py  test_feedback.py  test_matrix.py  test_monitor.py  test_ngram.py  test_optimize.py  test_params.py  test_signal.py  test_snn.py  test_spikes.py
tests/spikeml/plot/: test_plot_util.py
tests/spikeml/ui/: test_ipywidgets_ui.py
tests/spikeml/utils/: test_nb_util.py
