[build-system]
requires = ["uv>=0.6"]
build-backend = "uv.build"

[project]
name = "spikeml"
version = "0.0.1"
description = "Python module for spiking neural networks, neural dynamics, embodied cognitive modeling, and bio-inspired Machine-Learning"
authors = [
    { name="Jorge Simão", email="jorge.simao@einnovator.org" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10"
]

[tool.uv]
src = "src"

[tool.uv.extras.dev]
dependencies = ["pytest>=7.0", "black", "flake8"]
