[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "spikeml"
version = "0.0.1"
description = "Python module for spiking neural networks, neural dynamics, embodied cognitive modeling, and bio-inspired Machine-Learning"
authors = [
    { name="Jorge Simão", email="jorge.simao@einnovator.org" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24",
    "pyside6>=6.6.3.1",
    "scipy>=1.10",
]

[tool.uv]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "pytest>=7.0",
]


